<resources>
    <string name="app_name">Fe:Com</string>

    <string name="search">Search</string>
    <string name="mypage">mypage</string>
    <string name="board">게시판</string>
    <string name="like">좋아요</string>
    <string name="notLike">좋아요</string>
    <string name="comment">댓글</string>
    <string name="subscribe">구독</string>
    <string name="title">타이틀</string>
    <string name="nickname">닉네임</string>
    <string name="delete">삭제</string>
    <string name="content">내용:)</string>
    <string name="write">글쓰기</string>
    <string name="anonymous">익명</string>
    <string name="cancel">취소</string>
    <string name="complete">완료</string>
    <string name="add">추가</string>
    <string name="posting">글쓰기</string>
    <string name="menu">Menu</string>
    <string name="refresh">새로고침</string>
    <string name="university">대학</string>
    <string name="sook">숙명여대</string>

    <string name="example_time">2021–07–15 20:50:10</string>
    <string name="example_num">100</string>
    <string name="server_error">서버와 연결되지 않습니다. 네트워크를 확인해 주세요.</string>

    <string name="login_id">ID</string>
    <string name="login_id_ex">fecomMyfriend@gmail.com</string>
    <string name="login_id_error">이메일 ID를 입력해 주세요.</string>
    <string name="login_id_error2">이메일 ID가 옳지 않습니다.</string>
    <string name="login_pw">PASSWORD</string>
    <string name="login_pw_ex">••••••••••</string>
    <string name="login_pw_error">비밀번호를 입력해 주세요.</string>
    <string name="login_pw_error2">비밀번호가 옳지 않습니다.</string>
    <string name="login_login">LOGIN</string>
    <string name="login_logout">LOGOUT</string>
    <string name="login_signup">SIGN UP</string>

    <string name="signup_check">중복 확인</string>
    <string name="signup_name">NAME</string>
    <string name="signup_name_ex">김눈송</string>
    <string name="signup_name_error">이름을 입력해 주세요.</string>
    <string name="signup_nick">NICKNAME</string>
    <string name="signup_nick_ex">능소화</string>
    <string name="signup_nick_error">닉네임을 입력해 주세요.</string>
    <string name="signup_nick_error2">이미 해당 닉네임을 가진 회원이 존재합니다.</string>
    <string name="signup_id_error">이미 해당 이메일 ID를 가진 회원이 존재합니다.</string>
    <string name="signup_id_error2">이메일ID 중복 확인해 주세요.</string>
    <string name="signup_id_ok">사용 가능한 ID입니다.</string>
    <string name="signup_next">NEXT➞</string>
    <string name="signup_submit">Submit</string>
    <string name="signup_submit_error">다시 한번 제출해 주세요:)</string>

    <string name="signup2_univMail">대학교 메일 계정</string>
    <string name="signup2_univMail_ex">snow@sookmyung.ac.kr</string>
    <string name="signup2_auth">인증</string>
    <string name="signup2_studentID">학생증</string>
    <string name="signup2_plus">+</string>

    <string name="tab_board">전체 게시판</string>
    <string name="tab_dailytalk">Daily Talk</string>
    <string name="tab_home">Home</string>
    <string name="tab_discussion">대결</string>
    <string name="tab_discussion_full">대신 결정해드립니다</string>
    <string name="tab_notice">알림</string>
    <string name="tab_message">쪽지함</string>

    <string name="board_add">게시판 추가</string>

    <string name="search_ex">게시판 검색</string>
    <string name="search_no">게시판이 존재하지 않습니다.</string>

    <string name="home_dailyError">데일리톡 로딩 실패\n다시 로딩하려면 클릭해 주세요:)</string>
    <string name="home_boardError">즐겨찾는 게시판 로딩 실패\n다시 로딩하려면 클릭해 주세요:)</string>
    <string name="home_noBoard">구독한 게시판이 없습니다.</string>
    <string name="home_noTalk">데일리 톡 Top 10이 없습니다.</string>

    <string name="board_subscribe_yes">즐겨찾는 게시판 등록</string>
    <string name="board_subscribe_no">즐겨찾는 게시판 해제</string>

    <string name="mypage_memberInfo">회원 정보</string>
    <string name="mypage_univAuth">학교 인증</string>
    <string name="mypage_chNick">닉네임 변경</string>
    <string name="mypage_chPW">비밀번호 변경</string>
    <string name="mypage_community">커뮤니티</string>
    <string name="mypage_writePosts">내가 작성한 글</string>
    <string name="mypage_likePosts">내가 좋아요 누른 글</string>
    <string name="mypage_appInfo">앱 정보</string>
    <string name="mypage_version">버전 정보</string>
    <string name="mypage_version_ex">1.0</string>
    <string name="mypage_announcement">공지사항</string>
    <string name="mypage_useInfo">이용 안내</string>

    <string name="dailyTalk_time">1시간 전</string>
    <string name="dailyTalk_content">데일리톡 내용</string>
    <string name="dailyTalk_load">Daily Talk 불러오는 중:)</string>

    <string name="notice_load">알림을 불러오고 있습니다:)</string>
    <string name="notice_topic">주제</string>

    <string name="post_load">글을 불러오고 있습니다:)</string>
    <string name="post_comment">Comment</string>
    <string name="post_etComment">댓글을 입력하세요.</string>
    <string name="post_noComment">아직 댓글이 없습니다.</string>
    <string name="post_edit">게시글 수정</string>
    <string name="post_delete">게시글 삭제</string>

    <string name="posting_error">내용을 입력하세요.</string>
    <string name="posting_content">글의 내용을 입력하세요.</string>

    <string name="fHomeBoardRow_content">내용입니다..</string>

    <string name="boardRow_name">자유게시판</string>

    <string name="discussion_load">대결을 찾고 있습니다:)</string>
    <string name="discussion_apply">대결 신청</string>
    <string name="discussion_changeOrder1">HOT한 대결! 보기</string>
    <string name="discussion_changeOrder2">최신 대결! 보기</string>

    <string name="discussRow_num">참여자 수</string>
    <string name="discussRow_time">2021.08.19</string>
    <string name="discussRow_ex_prosContent">송강 호락호락한 모습</string>
    <string name="discussRow_ex_consContent">송강호 락하는 모습</string>
    <string name="discussRow_vs">VS</string>
    <string name="discussRow_ex_percent1">73%</string>
    <string name="discussRow_ex_percent2">27%</string>
    <string name="discussRow_by">By</string>

    <string name="applying_prosTitle">찬성 내용</string>
    <string name="applying_consTitle">반대 내용</string>
    <string name="applying_prosError">찬성 내용을 입력하세요.</string>
    <string name="applying_consError">반대 내용을 입력하세요.</string>
    <string name="applying_prosContent">대결의 찬성 내용을 입력하세요.</string>
    <string name="applying_consContent">대결의 반대 내용을 입력하세요.</string>

    <string name="infoDetail">제 2회 여대 연합 해커톤 LIGHT IT UP\n\n여대생을 위한 커뮤니티 Fe:Com 입니다.</string>
    <string name="noticeDetail">아직 공지사항이 없습니다</string>
    <string name="curPWTitle">현재 비밀번호</string>
    <string name="curPW">현재 비밀번호</string>
    <string name="newPWTitle">새 비밀번호</string>
    <string name="newPW">새 비밀번호</string>
    <string name="newPWCheck">새 비밀번호 확인</string>
    <string name="changePW">비밀번호 변경</string>
    <string name="changePWbtn">비밀번호 변경</string>
    <string name="curNickname">현재 닉네임</string>
    <string name="curNicknameTitle">현재 닉네임</string>
    <string name="newNickname">새 닉네임</string>
    <string name="newNicknameTitle">새 닉네임</string>
    <string name="changeNickname">닉네임 변경</string>
    <string name="changeNicknamebtn">닉네임 변경</string>
    <string name="mypage_mylike">내가 좋아요 누른 글</string>
</resources>