<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cPostRow_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/university"
            android:src="@drawable/logo_sookmyung" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <TextView
                android:id="@+id/cPostRow_univ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sook"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp" />

            <TextView
                android:id="@+id/cPostRow_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dailyTalk_time"
                android:textColor="@color/middle_grey"
                android:textSize="13sp" />

        </LinearLayout>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <TextView
        android:id="@+id/cPostRow_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:lineSpacingExtra="2dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:singleLine="false"
        android:text="@string/content"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/cPostRow_ivLike"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:adjustViewBounds="true"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/like"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_like" />
        <TextView
            android:id="@+id/cPostRow_tvLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/example_num"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <View
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:src="@drawable/icon_comment"
            android:contentDescription="@string/comment" />
        <TextView
            android:id="@+id/cPostRow_tvComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/example_num"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>
