<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <LinearLayout
        android:id="@+id/signup_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_btSubmit"
        app:layout_constraintVertical_bias="0.58">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.3"
            android:text="@string/signup_name"
            android:textColor="@color/main_fecom"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/signup_etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="15sp"
            tools:ignore="LabelFor" />
        <TextView
            android:id="@+id/signup_errorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="5dp"
            android:text="@string/signup_name_error"
            android:textColor="@color/red"
            android:textSize="13sp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.3"
            android:text="@string/signup_nick"
            android:textColor="@color/main_fecom"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/signup_etNick"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="15sp"
                tools:ignore="LabelFor" />
            <View
                android:layout_width="5dp"
                android:layout_height="match_parent" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_btCheckNick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_bt_check"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="10dp"
                android:text="@string/signup_check"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/signup_errorNick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="5dp"
            android:text="@string/signup_nick_error"
            android:textColor="@color/red"
            android:textSize="13sp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.3"
            android:text="@string/login_id"
            android:textColor="@color/main_fecom"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/signup_etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/login_id_ex"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />
            <View
                android:layout_width="5dp"
                android:layout_height="match_parent" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_btCheckEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_bt_check"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="10dp"
                android:text="@string/signup_check"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/signup_errorEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="5dp"
            android:text="@string/login_id_error"
            android:textColor="@color/red"
            android:textSize="13sp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.3"
            android:text="@string/login_pw"
            android:textColor="@color/main_fecom"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/signup_etPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="15sp"
            tools:ignore="LabelFor" />
        <TextView
            android:id="@+id/signup_errorPW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="5dp"
            android:text="@string/login_pw_error"
            android:textColor="@color/red"
            android:textSize="13sp"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/signup_btSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/main_fecom"
        android:letterSpacing="0.4"
        android:text="@string/signup_submit"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.85" />
    <TextView
        android:id="@+id/signup_errorSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="5dp"
        android:text="@string/signup_submit_error"
        android:textColor="@color/red"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/signup_btSubmit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

</androidx.constraintlayout.widget.ConstraintLayout>
