<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_fecom2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <RelativeLayout
        android:id="@+id/hTalkPage_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.05">
        <TextView
            android:id="@+id/hTalkPage_writer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/nickname"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/hTalkPage_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/dailyTalk_time"
            android:textColor="@color/middle_grey"
            android:textSize="12sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/hTalkPage_rl"
        app:layout_constraintBottom_toTopOf="@id/hTalkPage_ll"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_weight="1">
        <TextView
            android:id="@+id/hTalkPage_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="5"
            android:singleLine="false"
            android:text="@string/dailyTalk_content"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hTalkPage_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.95">
        <ImageView
            android:id="@+id/hTalkPage_ivLike"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_like"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/like" />
        <TextView
            android:id="@+id/hTalkPage_tvLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_num"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="45dp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_comment"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/comment" />
        <TextView
            android:id="@+id/hTalkPage_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_num"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
